k8s/apps/meow/sonarr/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: linuxserver/sonarr:4.0.19
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8989
          volumeMounts:
            - name: sonarr-config
              mountPath: /config
            - name: torrents
              mountPath: /downloads
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              memory: 512Mi
      volumes:
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: torrents
          persistentVolumeClaim:
            claimName: torrents
