k8s/apps/meow/sonarr/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  type: ClusterIP
  selector:
    app: sonarr
  ports:
    - name: http
      port: 80
      targetPort: 8989
