k8s/apps/meow/sonarr/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`series.meow.litarvan.com`)
      services:
        - name: sonarr
          port: http
