k8s/apps/meow/sonarr/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
spec:
  rules:
    - host: series.meow.litarvan.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  name: http
  tls:
    - hosts:
        - series.meow.litarvan.dev
      secretName: series-meow-tls
